# sqladmin-plugin-mvce

./: README.md  app.py  example.db  pyproject.toml
