[project]
name = "sqladmin-plugin-mvce"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "cemrehancavdar", email = "cemrehancavdar@hotmail.com" }
]
dependencies = [
    "litestar[standard]>=2.8.3",
    "sqladmin-litestar-plugin>=0.1.1",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
